--- a/source/_posts/2023-08-10-c-notes.md
+++ b/source/_posts/2023-08-10-c-notes.md
@@ -1,5 +1,5 @@
 ---
-title: C语言复习(持续更新~)
+title: C语言复习（持续更新~）
 index_img: https://static.kevinchu.top/blog/assets/img/cover_003.jpeg
 archive: false
 date: 2023-08-23 09:58:36
