--- a/source/_posts/2023-12-31-talk-about-2023.md
+++ b/source/_posts/2023-12-31-talk-about-2023.md
@@ -1,7 +1,7 @@
 ---
 title: 【杂谈】简单复盘一下2023
 index_img: https://static.kevinchu.top/blog/assets/img/cover_018.jpeg
-archive: false
+archive: true
 date: 2023-12-31 00:32:03
 updated: 2023-12-31 00:32:03
 tags:
